tests/invalid/var_scope.turtle
{
    let x = 10
}
move x